Parte 1 - Adição do Container Principal

--- a/template.html
+++ b/template.html
@@ -30,6 +30,9 @@
 				</div>
 			</div>
 		</nav>
+		<div id="main" class="container-fluid">
+			<h3 class="page-header">Template Inicial</h3>
+		</div>
 		<script src="js/jquery.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 	</body>
