Parte 2 - Adicionando um Form e os Botões

--- a/add.html
+++ b/add.html
@@ -32,6 +32,16 @@
 		</nav>
 		<div id="main" class="container-fluid">
 			<h3 class="page-header">Adicionar Item</h3>
+			<form action="index.html">
+				<!-- area de campos do form -->
+				<hr />
+				<div id="actions" class="row">
+					<div class="col-md-12">
+						<button type="submit" class="btn btn-primary">Salvar</button>
+						<a href="index.html" class="btn btn-default">Cancelar</a>
+					</div>
+				</div>
+			</form>
 		</div>
 		<script src="js/jquery.js"></script>
 		<script src="js/bootstrap.min.js"></script>
