--- a/add.html
+++ b/add.html
@@ -32,8 +32,22 @@
 		</nav>
 		<div id="main" class="container-fluid">
 			<h3 class="page-header">Adicionar Item</h3>
-			<form action="index.html">
+			<form action="index.html"> <!--action diz respeito ao fluxo da página, substituir depois pelo correto provavelmente um script de back-end-->
 				<!-- area de campos do form -->
+				<div class="row">
+					<div class="form-group col-md-4">
+					   <label for="campo1">Campo Um</label>
+					   <input type="text" class="form-control" id="campo1">
+					</div>					 
+					<div class="form-group col-md-4">
+					   <label for="campo2">Campo Dois</label>
+					   <input type="text" class="form-control" id="campo3">
+					</div>
+					<div class="form-group col-md-4">
+					   <label for="campo3">Campo Três</label>
+					   <input type="text" class="form-control" id="campo3">
+					</div>
+				</div>
 				<hr />
 				<div id="actions" class="row">
 					<div class="col-md-12">
