Parte 3 - Adição de campos para visualização

--- a/view.html
+++ b/view.html
@@ -32,6 +32,20 @@
 		</nav>
 		<div id="main" class="container-fluid">
 			<h3 class="page-header">Visualizar Item</h3>
+			<div class="row">
+				<div class="col-md-4">
+					<p><strong>Nome do Campo</strong></p>
+					<p>{Valor do Campo}</p> <!--valor que for recuperado da base de dados - usar backend ou algum script para trazer essas informações-->
+				</div>
+				<div class="col-md-4">
+					<p><strong>Nome do Campo</strong></p>
+					<p>{Valor do Campo}</p>
+				</div>
+				<div class="col-md-4">
+					<p><strong>Nome do Campo</strong></p>
+					<p>{Valor do Campo}</p>
+				</div>
+			</div> <!-- .row -->
 		</div>
 		<script src="js/jquery.js"></script>
 		<script src="js/bootstrap.min.js"></script>
