Parte 3 - Adição de botões de ação

--- a/view.html
+++ b/view.html
@@ -46,6 +46,13 @@
 					<p>{Valor do Campo}</p>
 				</div>
 			</div> <!-- .row -->
+			<hr />
+			<div id="actions" class="row">
+				<div class="col-md-12">
+					<a href="edit.html" class="btn btn-primary">Editar</a>
+					<a href="index.html" class="btn btn-default">Fechar</a>
+				</div>
+			</div>
 		</div>
 		<script src="js/jquery.js"></script>
 		<script src="js/bootstrap.min.js"></script>
