Parte 4 - Adição do botão de exclusão na visualização

--- a/view.html
+++ b/view.html
@@ -49,8 +49,9 @@
 			<hr />
 			<div id="actions" class="row">
 				<div class="col-md-12">
-					<a href="edit.html" class="btn btn-primary">Editar</a>
-					<a href="index.html" class="btn btn-default">Fechar</a>
+					<a href="index.html" class="btn btn-default">Voltar</a>
+					<a href="edit.html" class="btn btn-primary">Editar</a>					
+					<a href="#" class="btn btn-default" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 				</div>
 			</div>
 		</div>
