--- a/view.html
+++ b/view.html
@@ -9,6 +9,24 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body> 
+	<!-- Modal -->
+	<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+	  <div class="modal-dialog" role="document">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
+			<h4 class="modal-title" id="modalLabel">Excluir Item</h4>
+		  </div>
+		  <div class="modal-body">
+			Deseja realmente excluir este item?
+		  </div>
+		  <div class="modal-footer">
+			<button type="button" class="btn btn-primary">Sim</button><!--implementar javascript para realizar exclusão , back-end-->
+	 <button type="button" class="btn btn-default" data-dismiss="modal">N&atilde;o</button>
+		  </div>
+		</div>
+	  </div>
+	</div> <!-- /.modal -->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -51,7 +69,7 @@
 				<div class="col-md-12">
 					<a href="index.html" class="btn btn-default">Voltar</a>
 					<a href="edit.html" class="btn btn-primary">Editar</a>					
-					<a href="#" class="btn btn-default" data-toggle="modal" data-target="#delete-modal">Excluir</a>
+					<a href="#" class="btn btn-default btn-danger" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 				</div>
 			</div>
 		</div>
