--- a/add.html
+++ b/add.html
@@ -18,7 +18,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Web Dev Academy</a>
+					<a class="navbar-brand" href="#">Projeto Música na Escola</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -51,7 +51,7 @@
 				<hr />
 				<div id="actions" class="row">
 					<div class="col-md-12">
-						<button type="submit" class="btn btn-primary">Salvar</button>
+						<button type="submit" class="btn btn-success">Salvar</button>
 						<a href="index.html" class="btn btn-default">Cancelar</a>
 					</div>
 				</div>
