--- a/view.html
+++ b/view.html
@@ -36,7 +36,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Web Dev Academy</a>
+					<a class="navbar-brand" href="#">Projeto Música na Escola</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -67,7 +67,7 @@
 			<hr />
 			<div id="actions" class="row">
 				<div class="col-md-12">
-					<a href="index.html" class="btn btn-default">Voltar</a>
+					<a href="index.html" class="btn btn-success">Voltar</a>
 					<a href="edit.html" class="btn btn-primary">Editar</a>					
 					<a href="#" class="btn btn-default btn-danger" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 				</div>
