--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body> 
+	<!-- Modal -->
+	<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="modalLabel">Excluir Item</h4>
+				</div>
+				<div class="modal-body">Deseja realmente excluir este item? </div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary">Sim</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">N&atilde;o</button>
+				</div>
+			</div>
+		</div>
+	</div><!--fim modal-->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -85,7 +101,7 @@
 		 
 			<div id="bottom" class="row">
 				<div class="col-md-12">
-         
+				<!--A quantidade de páginas depende de um cálculo sobre a quantidade de registros-->
 					<ul class="pagination"><!--fazer os links href com back-end-->
 						<li class="disabled"><a>&lt; Anterior</a></li>
 						<li class="disabled"><a>1</a></li>
