--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Projeto Música na Escola</a>
+					<a class="navbar-brand" href="#">MÚSICA NA ESCOLA</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Início</a></li>
+						<li><a href="index.html">Início</a></li>
 						<li><a href="#">Opções</a></li>
 						<li><a href="#">Perfil</a></li>
 						<li><a href="#">Ajuda</a></li>
@@ -50,7 +50,7 @@
 			<!--<h3 class="page-header">Página Inicial</h3> -->
 			<div id="top" class="row">
 				<div class="col-md-3">
-					<h2>Itens</h2>
+				<!--	<h2>Itens</h2>-->
 				</div>			 
 				<div class="col-md-6"><!--implementar requisição de busca com ajax-->
 					<div class="input-group h2">
@@ -73,9 +73,9 @@
 						<thead>
 							<tr>
 								<th>ID</th>
-								<th>Header 1</th>
-								<th>Header 2</th>
-								<th>Header 3</th>
+								<th>Escola</th>
+								<th>Cidade</th>
+								<th>Atualização</th>
 								<th class="actions">Ações</th>
 							 </tr>
 						</thead>
