--- a/view.html
+++ b/view.html
@@ -36,11 +36,11 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Projeto Música na Escola</a>
+					<a class="navbar-brand" href="#">MÚSICA NA ESCOLA</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Início</a></li>
+						<li><a href="index.html">Início</a></li>
 						<li><a href="#">Opções</a></li>
 						<li><a href="#">Perfil</a></li>
 						<li><a href="#">Ajuda</a></li>
