Adição de dados em um banco de dados mysql local

--- a/add.html
+++ b/add.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>CRUD com Bootstrap 3</title>		 
+		<title>Adicionar Escola</title>		 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
@@ -32,21 +32,28 @@
 		</nav>
 		<div id="main" class="container-fluid">
 			<h3 class="page-header">Adicionar Item</h3>
-			<form action="index.html"> <!--action diz respeito ao fluxo da página, substituir depois pelo correto provavelmente um script de back-end-->
+			<form method="post" action="insert.php"> <!--action diz respeito ao fluxo da página, substituir depois o index.html pelo correto provavelmente um script de back-end-->
 				<!-- area de campos do form -->
 				<div class="row">
 					<div class="form-group col-md-4">
-					   <label for="campo1">Campo Um</label>
-					   <input type="text" class="form-control" id="campo1">
+					   <label for="campo1">Escola</label>
+					   <input type="text" class="form-control" name="campo1" id="campo1">
 					</div>					 
 					<div class="form-group col-md-4">
-					   <label for="campo2">Campo Dois</label>
-					   <input type="text" class="form-control" id="campo3">
+					   <label for="campo2">Cidade</label>
+					   <input type="text" class="form-control" name="campo2" id="campo2">
 					</div>
 					<div class="form-group col-md-4">
-					   <label for="campo3">Campo Três</label>
-					   <input type="text" class="form-control" id="campo3">
+					   <label for="campo3">Identificador</label>
+					   <input type="number" class="form-control" name="campo3" id="campo3">
 					</div>
+				</div>
+				<div class="row">
+					<div class="form-group col-md-4">
+					   <label for="campo4">Telefone</label>
+					   <input type="number" class="form-control" name="campo4" id="campo4">
+					</div>	 
+					
 				</div>
 				<hr />
 				<div id="actions" class="row">
@@ -54,7 +61,7 @@
 						<button type="submit" class="btn btn-success">Salvar</button>
 						<a href="index.html" class="btn btn-default">Cancelar</a>
 					</div>
-				</div>
+				</div>				
 			</form>
 		</div>
 		<script src="js/jquery.js"></script>
