--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>CRUD com Bootstrap 3</title>		 
+		<title>Música na Escola</title>		 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
-	<body> 
-	<!-- Modal -->
-	<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="modalLabel">Excluir Item</h4>
-				</div>
-				<div class="modal-body">Deseja realmente excluir este item? </div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-primary">Sim</button>
-					<button type="button" class="btn btn-default" data-dismiss="modal">N&atilde;o</button>
+	<body>		
+		<!-- Modal -->
+		<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="modalLabel">Excluir Item</h4>
+					</div>
+					<div class="modal-body">Deseja realmente excluir este item? </div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary">Sim</button>
+						<button type="button" class="btn btn-default" data-dismiss="modal">N&atilde;o</button>
+					</div>
 				</div>
 			</div>
-		</div>
-	</div><!--fim modal-->
+		</div><!--fim modal-->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
