--- a/add.html
+++ b/add.html
@@ -22,7 +22,7 @@
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">Início</a></li>
+						<li><a href="index.php">Início</a></li>
 						<li><a href="#">Opções</a></li>
 						<li><a href="#">Perfil</a></li>
 						<li><a href="#">Ajuda</a></li>
@@ -59,7 +59,7 @@
 				<div id="actions" class="row">
 					<div class="col-md-12">
 						<button type="submit" class="btn btn-success">Salvar</button>
-						<a href="index.html" class="btn btn-default">Cancelar</a>
+						<a href="index.php" class="btn btn-default">Cancelar</a>
 					</div>
 				</div>				
 			</form>
