--- a/view.html
+++ b/view.html
@@ -40,7 +40,7 @@
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">Início</a></li>
+						<li><a href="index.php">Início</a></li>
 						<li><a href="#">Opções</a></li>
 						<li><a href="#">Perfil</a></li>
 						<li><a href="#">Ajuda</a></li>
@@ -67,7 +67,7 @@
 			<hr />
 			<div id="actions" class="row">
 				<div class="col-md-12">
-					<a href="index.html" class="btn btn-success">Voltar</a>
+					<a href="index.php" class="btn btn-success">Voltar</a>
 					<a href="edit.html" class="btn btn-primary">Editar</a>					
 					<a href="#" class="btn btn-default btn-danger" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 				</div>
